<resources>
    <string name="app_name">ScanDistance</string>
    <string name="no_qrcode_detected">no QR code detected</string>
    <string name="scanning">Scanning!</string>
    <string name="use_this_location">Calculate using this location</string>
    <string name="not_a_valid_code">Not a valid code!</string>
    <string name="geolocation_distance_calculator">Geolocation Distance Calculator</string>
    <string name="current_location">Current Location:</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="distance">Distance (km):</string>
    <string name="target_location">Target Location:</string>
    <string name="_0000_0000">0000.0000</string>
    <string name="_000_00000">000.00000</string>
    <string name="start_scanning">Start Scanning!</string>
    <string name="a_qr_icon_for_fun">A QR icon for fun</string>
</resources>