<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/qr_icon"
        android:layout_above="@id/titleSection"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/a_qr_icon_for_fun" />

    <TextView
        android:id="@+id/titleSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/geolocation_distance_calculator"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp" />
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleSection"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/start_scanning" />

</RelativeLayout>